Physics/Bullet/Raw/BulletCollision/NarrowPhaseCollision.chs

{#fun btConstraintRow_m_accumImpulse_get    `( BtConstraintRowClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
-- * btDiscreteCollisionDetectorInterface
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h?r=2223#63>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.cpp?r=2223>
-}
{#fun btDiscreteCollisionDetectorInterface_getClosestPoints as btDiscreteCollisionDetectorInterface_getClosestPoints    `( BtDiscreteCollisionDetectorInterfaceClass bc , BtDiscreteCollisionDetectorInterface_ClosestPointInputClass p0 , BtDiscreteCollisionDetectorInterface_ResultClass p1 , BtIDebugDrawClass p2 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ input
, withBt* `p1'  -- ^ output
, withBt* `p2'  -- ^ debugDraw
,  `Bool'  -- ^ swapResults
 } ->  `()'   #}
-- * btGjkEpaSolver2
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h?r=2223#32>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp?r=2223>
-}
{#fun btGjkEpaSolver2_new as btGjkEpaSolver2    {  } -> `BtGjkEpaSolver2' mkBtGjkEpaSolver2* #}
{#fun btGjkEpaSolver2_free    `( BtGjkEpaSolver2Class bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h?r=2223#47>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp?r=2223>
-}
{#fun btGjkEpaSolver2_StackSizeRequirement as btGjkEpaSolver2_StackSizeRequirement    `( )' =>     {  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h?r=2223#52>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp?r=2223>
-}
{#fun btGjkEpaSolver2_Distance as btGjkEpaSolver2_Distance    `(  BtConvexShapeClass p0 , BtConvexShapeClass p2 , BtGjkEpaSolver2_sResultsClass p5 )' =>     {  withBt* `p0'  -- ^ shape0
, withTransform* `Transform'  peekTransform* -- ^ wtrs0
, withBt* `p2'  -- ^ shape1
, withTransform* `Transform'  peekTransform* -- ^ wtrs1
, withVec3* `Vec3'  peekVec3* -- ^ guess
, withBt* `p5'  -- ^ results
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h?r=2223#52>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp?r=2223>
-}
{#fun btGjkEpaSolver2_Distance as btGjkEpaSolver2_Distance'    `(  BtConvexShapeClass p0 , BtConvexShapeClass p2 , BtGjkEpaSolver2_sResultsClass p5 )' =>     {  withBt* `p0'  -- ^ shape0
, allocaTransform-  `Transform'  peekTransform* -- ^ wtrs0
, withBt* `p2'  -- ^ shape1
, allocaTransform-  `Transform'  peekTransform* -- ^ wtrs1
, allocaVec3-  `Vec3'  peekVec3* -- ^ guess
, withBt* `p5'  -- ^ results
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h?r=2223#58>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp?r=2223>
-}
{#fun btGjkEpaSolver2_Penetration as btGjkEpaSolver2_Penetration    `(  BtConvexShapeClass p0 , BtConvexShapeClass p2 , BtGjkEpaSolver2_sResultsClass p5 )' =>     {  withBt* `p0'  -- ^ shape0
, withTransform* `Transform'  peekTransform* -- ^ wtrs0
, withBt* `p2'  -- ^ shape1
, withTransform* `Transform'  peekTransform* -- ^ wtrs1
, withVec3* `Vec3'  peekVec3* -- ^ guess
, withBt* `p5'  -- ^ results
,  `Bool'  -- ^ usemargins
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h?r=2223#58>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp?r=2223>
-}
{#fun btGjkEpaSolver2_Penetration as btGjkEpaSolver2_Penetration'    `(  BtConvexShapeClass p0 , BtConvexShapeClass p2 , BtGjkEpaSolver2_sResultsClass p5 )' =>     {  withBt* `p0'  -- ^ shape0
, allocaTransform-  `Transform'  peekTransform* -- ^ wtrs0
, withBt* `p2'  -- ^ shape1
, allocaTransform-  `Transform'  peekTransform* -- ^ wtrs1
, allocaVec3-  `Vec3'  peekVec3* -- ^ guess
, withBt* `p5'  -- ^ results
,  `Bool'  -- ^ usemargins
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h?r=2223#64>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp?r=2223>
-}
{#fun btGjkEpaSolver2_SignedDistance0 as btGjkEpaSolver2_SignedDistance    `(  BtConvexShapeClass p2 , BtGjkEpaSolver2_sResultsClass p4 )' =>     {  withVec3* `Vec3'  peekVec3* -- ^ position
,  `Float'  -- ^ margin
, withBt* `p2'  -- ^ shape
, withTransform* `Transform'  peekTransform* -- ^ wtrs
, withBt* `p4'  -- ^ results
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h?r=2223#64>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp?r=2223>
-}
{#fun btGjkEpaSolver2_SignedDistance0 as btGjkEpaSolver2_SignedDistance'    `(  BtConvexShapeClass p2 , BtGjkEpaSolver2_sResultsClass p4 )' =>     {  allocaVec3-  `Vec3'  peekVec3* -- ^ position
,  `Float'  -- ^ margin
, withBt* `p2'  -- ^ shape
, allocaTransform-  `Transform'  peekTransform* -- ^ wtrs
, withBt* `p4'  -- ^ results
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h?r=2223#64>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp?r=2223>
-}
{#fun btGjkEpaSolver2_SignedDistance0 as btGjkEpaSolver2_SignedDistance0    `(  BtConvexShapeClass p2 , BtGjkEpaSolver2_sResultsClass p4 )' =>     {  withVec3* `Vec3'  peekVec3* -- ^ position
,  `Float'  -- ^ margin
, withBt* `p2'  -- ^ shape
, withTransform* `Transform'  peekTransform* -- ^ wtrs
, withBt* `p4'  -- ^ results
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h?r=2223#64>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp?r=2223>
-}
{#fun btGjkEpaSolver2_SignedDistance0 as btGjkEpaSolver2_SignedDistance0'    `(  BtConvexShapeClass p2 , BtGjkEpaSolver2_sResultsClass p4 )' =>     {  allocaVec3-  `Vec3'  peekVec3* -- ^ position
,  `Float'  -- ^ margin
, withBt* `p2'  -- ^ shape
, allocaTransform-  `Transform'  peekTransform* -- ^ wtrs
, withBt* `p4'  -- ^ results
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h?r=2223#69>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp?r=2223>
-}
{#fun btGjkEpaSolver2_SignedDistance1 as btGjkEpaSolver2_SignedDistance1    `(  BtConvexShapeClass p0 , BtConvexShapeClass p2 , BtGjkEpaSolver2_sResultsClass p5 )' =>     {  withBt* `p0'  -- ^ shape0
, withTransform* `Transform'  peekTransform* -- ^ wtrs0
, withBt* `p2'  -- ^ shape1
, withTransform* `Transform'  peekTransform* -- ^ wtrs1
, withVec3* `Vec3'  peekVec3* -- ^ guess
, withBt* `p5'  -- ^ results
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h?r=2223#69>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp?r=2223>
-}
{#fun btGjkEpaSolver2_SignedDistance1 as btGjkEpaSolver2_SignedDistance1'    `(  BtConvexShapeClass p0 , BtConvexShapeClass p2 , BtGjkEpaSolver2_sResultsClass p5 )' =>     {  withBt* `p0'  -- ^ shape0
, allocaTransform-  `Transform'  peekTransform* -- ^ wtrs0
, withBt* `p2'  -- ^ shape1
, allocaTransform-  `Transform'  peekTransform* -- ^ wtrs1
, allocaVec3-  `Vec3'  peekVec3* -- ^ guess
, withBt* `p5'  -- ^ results
 } ->  `Bool'   #}
-- * btGjkPairDetector
{#fun btGjkPairDetector_free    `( BtGjkPairDetectorClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.h?r=2223#75>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp?r=2223>
-}
{#fun btGjkPairDetector_setCachedSeperatingAxis as btGjkPairDetector_setCachedSeperatingAxis    `( BtGjkPairDetectorClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ seperatingAxis
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.h?r=2223#75>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp?r=2223>
-}
{#fun btGjkPairDetector_setCachedSeperatingAxis as btGjkPairDetector_setCachedSeperatingAxis'    `( BtGjkPairDetectorClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ seperatingAxis
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.h?r=2223#80>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp?r=2223>
-}
{#fun btGjkPairDetector_getCachedSeparatingAxis as btGjkPairDetector_getCachedSeparatingAxis    `( BtGjkPairDetectorClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.h?r=2223#61>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp?r=2223>
-}
{#fun btGjkPairDetector_getClosestPoints as btGjkPairDetector_getClosestPoints    `( BtGjkPairDetectorClass bc , BtDiscreteCollisionDetectorInterface_ClosestPointInputClass p0 , BtDiscreteCollisionDetectorInterface_ResultClass p1 , BtIDebugDrawClass p2 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ input
, withBt* `p1'  -- ^ output
, withBt* `p2'  -- ^ debugDraw
,  `Bool'  -- ^ swapResults
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.h?r=2223#66>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp?r=2223>
-}
{#fun btGjkPairDetector_setMinkowskiA as btGjkPairDetector_setMinkowskiA    `( BtGjkPairDetectorClass bc , BtConvexShapeClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ minkA
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.h?r=2223#71>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp?r=2223>
-}
{#fun btGjkPairDetector_setMinkowskiB as btGjkPairDetector_setMinkowskiB    `( BtGjkPairDetectorClass bc , BtConvexShapeClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ minkB
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.h?r=2223#95>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp?r=2223>
-}
{#fun btGjkPairDetector_setIgnoreMargin as btGjkPairDetector_setIgnoreMargin    `( BtGjkPairDetectorClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Bool'  -- ^ ignoreMargin
 } ->  `()'   #}
